[package]
name = "d4"
version = "0.3.11"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The D4 file format implementation"
repository = "https://github.com/38/d4-format"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
depth_profiler = ["d4-hts", "rayon", "rand"]
task = ["mapped_io", "rayon"]
mapped_io = ["d4-framefile/mapped_io"]
writer = ["mapped_io"]
http_reader = ["reqwest"]
default = ["depth_profiler", "task", "writer", "http_reader"]
seq-task = []

[dev-dependencies]
env_logger = "0.9.0"
