[package]
name = "d4binding"
version = "0.3.6"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.60.1"

[lib]
crate-type = ["cdylib", "staticlib"]
